[gd_scene load_steps=2 format=3 uid="uid://b0rq0wkce5o6l"]

[ext_resource type="Script" path="res://Components/Visual/NodeFacingComponent.gd" id="1_thwbx"]

[node name="NodeFacingComponent" type="Node2D" groups=["components"]]
script = ExtResource("1_thwbx")

[node name="ReenablingTimer" type="Timer" parent="."]
editor_description = "To re-enable this component after another mutually-exclusive component is used."
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="ReenablingTimer" to="." method="onReenablingTimer_timeout"]
